tests/cases/negative/typing/grading/zeroUseVarUsedInType.lam
-- we specify zero uses, but we use the variable in the type
test : (l : [zero, zero] Level) -> (a : Type l) -> Level
test = _
